made change to the link

--- a/game.html
+++ b/game.html
@@ -76,7 +76,7 @@
     <div id="pause-menu" class="flex-center flex-column">
         <h1>PAUSED!</h1>
         <a class="btn" id="resume" href="#">Resume</a>
-        <a class="btn" href="/index.html">Home</a>
+        <a class="btn" href="./index.html">Home</a>
     </div>
 
     
