--- a/highScore.html
+++ b/highScore.html
@@ -12,7 +12,7 @@
 <div id="highScore" class="flex-center flex-column">
 <h1 id="finalScore">High Scores</h1>
 <ul id="highScoresLists"></ul>
-<a href="/" class="btn">Go Home</a>
+<a href="./" class="btn">Go Home</a>
 </div>
 
     </div>
