--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="container">
     <div id="home" class="flex-center flex-column">
         <h1>Quick Quiz!</h1>
-        <a class="btn" href="/game.html">Play</a>
-        <a class="btn" href="/highScore.html">Highh Scores</a>
+        <a class="btn" href="./game.html">Play</a>
+        <a class="btn" href="./highScore.html">Highh Scores</a>
     </div>
 </div> 
 
